<resources>
    <string name="app_name">Scoops</string>
    <string name="drawable">drawable</string>
    <string name="volunteer">Volunteer</string>
    <string name="todo7">TODO</string>
    <string name="todo2">TODO</string>
    <string name="client">Client</string>
    <string name="todo">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="last_name">Last Name</string>
    <string name="_0761234567">0761234567</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="first_name">First Name</string>
    <string name="mm_dd_yyyy">MM-DD-YYYY</string>
    <string name="todo16">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="other">Other</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="enter_your_email_address">Enter Your Email address</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="todo17">TODO</string>
    <string name="todo18">TODO</string>
    <string name="todo19">TODO</string>
    <string name="todo20">TODO</string>
    <string name="todo21">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo23">TODO</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo24">TODO</string>
    <string name="todo25">TODO</string>
    <string name="todo31">TODO</string>
    <string name="todo26">TODO</string>
    <string name="todo27">TODO</string>
    <string name="todo28">TODO</string>
    <string name="todo29">TODO</string>
    <string name="todo30">TODO</string>
    <string name="action_settings" />
    <string name="check_status">Check Status</string>
    <string name="sorry_your_request_has_not_been_accepted_by_a_volunteer_thank_you_for_you_patince">Sorry your request has not been accepted by a volunteer, thank you for you patince</string>
    <string name="your_request_has_been_accepted_a_volunteer_is_on_their_way">Your request has been accepted a volunteer is on their way</string>
    <string name="you_have_no_notifications">You have no Notifications</string>
    <string name="todo39">TODO</string>

    <string name="str_register">
        This is an <u>underline</u>.
    </string>

</resources>
