<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientProfile"
    android:background="@drawable/gradient_backgroud">

    <ImageButton
        android:id="@+id/btnNotifications2"
        android:layout_width="142dp"
        android:layout_height="198dp"
        android:background="@drawable/rectangle17"
        android:contentDescription="@string/todo27"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725"
        app:srcCompat="@drawable/notification" />

    <ImageButton
        android:id="@+id/btnSettings2"
        android:layout_width="135dp"
        android:layout_height="199dp"
        android:background="@drawable/rectangle17"
        android:contentDescription="@string/todo30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        app:srcCompat="@drawable/settings" />

    <ImageButton
        android:id="@+id/btnEdit2"
        android:layout_width="150dp"
        android:layout_height="188dp"
        android:background="@drawable/rectangle17"
        android:contentDescription="@string/todo25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edit" />

    <ImageButton
        android:id="@+id/btnHistory2"
        android:layout_width="140dp"
        android:layout_height="187dp"
        android:background="@drawable/rectangle17"
        android:contentDescription="@string/todo26"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501"
        app:srcCompat="@drawable/history" />

    <ImageView
        android:id="@+id/imgTrees2"
        android:layout_width="500dp"
        android:layout_height="346dp"
        android:layout_marginBottom="1168dp"
        android:contentDescription="@string/todo24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        app:srcCompat="@drawable/galaxywallpaper" />

    <ImageButton
        android:id="@+id/btnHelp2"
        android:layout_width="147dp"
        android:layout_height="199dp"
        android:background="@drawable/rectangle17"
        android:contentDescription="@string/todo28"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955"
        app:srcCompat="@drawable/help" />

    <ImageButton
        android:id="@+id/btnBrowse2"
        android:layout_width="150dp"
        android:layout_height="196dp"
        android:layout_marginTop="624dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/rectangle17"
        android:contentDescription="@string/todo29"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264"
        app:srcCompat="@drawable/browse" />
</androidx.constraintlayout.widget.ConstraintLayout>