<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage"
    android:background="@drawable/landingpage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="794dp"
        android:layout_height="646dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362"
        app:srcCompat="@drawable/helping" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="874dp"
        android:layout_height="310dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        app:srcCompat="@drawable/welcome" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="437dp"
        android:layout_height="142dp"
        android:contentDescription="@string/todo3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667"
        app:srcCompat="@drawable/discover" />

</androidx.constraintlayout.widget.ConstraintLayout>